# WPN114-fft-effects

./: .gitmodules  CMakeLists.txt  README.md  qml_plugin.cpp  wpn114-fft-effects.pri  wpn114-fft-effects.pro
qml/: fft.qmltypes  qmldir
source/convolver/: convolver.cpp  convolver.hpp
